installation/run-app/deploymentA/svc-deploymentA.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: default
spec:
  type: NodePort
  selector:
    app: deploy-a
  ports:
  - port: 5000
    targetPort: 5000
